[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[connection signal="clear_game" from="HUD" to="." method="_clear_game"]
[connection signal="start_game" from="HUD" to="." method="_start_game"]
[connection signal="start_test" from="HUD" to="." method="_start_test"]
